--- a/scss/dependencies/specials.scss
+++ b/scss/dependencies/specials.scss
@@ -191,3 +191,7 @@ $p-color: red;
   left:-2px;
   top:-13px !important;
 }
+
+.device-xxs #specials-top {
+  height:210px;
+}
